--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ pip-log.txt
 /Client/nbproject/private/
 /Frontend/nbproject/private/
 /FileServer/nbproject/private/
+/Message/nbproject/private/
