--- a/FileServer/nbproject/project.properties
+++ b/FileServer/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/FileServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Message.jar=..\\Message\\dist\\Message.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Message.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
