--- a/Message/nbproject/project.properties
+++ b/Message/nbproject/project.properties
@@ -24,16 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Frontend.jar
+dist.jar=${dist.dir}/Message.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.Message.jar=..\\Message\\dist\\Message.jar
-file.reference.T3Interfaces.jar=..\\T3Interfaces\\dist\\T3Interfaces.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.T3Interfaces.jar}:\
-    ${file.reference.Message.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,10 +53,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=frontend.Main
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
